--- a/stylenew.css
+++ b/stylenew.css
@@ -458,3 +458,11 @@ button{
         line-height: 38px;
     }
 }
+
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    [class*="sections "] {
+      width: 80%;
+      margin: auto;
+    }
+  }
